--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Bogus"
+  name             : "Bogusss"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I am an **hardworking** person."
   location         : "Seoul"
