--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ analytics:
 author:
   name             : "Bogusss"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **hardworking** person."
+  bio              : "“The only way to go fast, is to go well.” ― Robert C. Martin, Clean Architecture"
   location         : "Seoul"
   email            : "chybogas@gmail.com"
   links:
