--- a/_config.yml
+++ b/_config.yml
@@ -277,7 +277,7 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: #true
+      author_profile: false #true
       read_time: true
       comments: true
       share: true
