--- a/_config.yml
+++ b/_config.yml
@@ -273,7 +273,7 @@ compress_html:
 defaults:
   # _posts
   - scope:
-      path: "assets/images/posts/"
+      path: ""
       type: posts
     values:
       layout: single
