modified location, update posts

--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ author:
   name             : "Bogusss"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "“The only way to go fast, is to go well.” ― Robert C. Martin, Clean Architecture"
-  location         : "Seoul"
+  location         : "Seoul, Republic of korea"
   email            : "chybogas@gmail.com"
   links:
     - label: "Email"
