--- a/_config.yml
+++ b/_config.yml
@@ -175,6 +175,8 @@ exclude:
   - tmp
   - /docs # ignore Minimal Mistakes /docs
   - /test # ignore Minimal Mistakes /test
+  - node_modules
+  - dev-react-pages
 keep_files:
   - .git
   - .svn
