--- a/_config.yml
+++ b/_config.yml
@@ -102,21 +102,9 @@ author:
   location         : "Seoul, Republic of korea"
   email            : "chybogas@gmail.com"
   links:
-    - label: "Email"
-      icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:chybogass@gmail.com"
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://hyun0jam.github.io"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      # url: "https://twitter.com/"
-    - label: "Facebook"
-      icon: "fab fa-fw fa-facebook-square"
-      # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/hyun0jam"
+      url: "https://github.com/hy1116"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       url: "https://instagram.com/hyunyoungss"
