참고 안보이도록 수정

--- a/_config.yml
+++ b/_config.yml
@@ -286,5 +286,5 @@ defaults:
       toc_sticky : true
       read_time: false
       share: true
-      related: true
+      #related: true
       show_date: true
