instargram url update

--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ author:
       url: "https://github.com/hy1116"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/hyunyoungss"
+      url: "https://instagram.com/hyunyoooong"
 
 # Site Footer
 footer:
