--- a/react-pages/package.json
+++ b/react-pages/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-kakao-login": "^2.1.0",
     "react-router-dom": "^6.2.1",
+    "react-script": "^2.0.5",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.3"
   },
