--- a/react-pages/package.json
+++ b/react-pages/package.json
@@ -8,9 +8,11 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.6.3",
+    "moment": "^2.30.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-kakao-login": "^2.1.0",
+    "react-moment": "^1.1.3",
     "react-router-dom": "^6.2.1",
     "react-script": "^2.0.5",
     "react-scripts": "5.0.0",
